--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,9 @@
         "symfony/config": "~2.8|~3.0|~4.0",
         "symfony/console": "~2.3,!=2.7.0|~4.0",
         "symfony/dependency-injection": "~2.3,!=2.7.0|~4.0",
-        "techdivision/import": "14.*",
-        "techdivision/import-app-simple": "15.*",
-        "techdivision/import-configuration-jms": "14.*"
+        "techdivision/import": "15.x-dev as 15.0.0",
+        "techdivision/import-app-simple": "16.x-dev as 16.0.0",
+        "techdivision/import-configuration-jms": "15.x-dev as 15.0.0"
     },
     "require-dev": {
         "doctrine/dbal": "2.5.*",
@@ -20,7 +20,7 @@
         "sebastian/phpcpd": "~3.0.0",
         "squizlabs/php_codesniffer": "3.3.1",
         "consolidation/robo": "~1.0",
-        "mikey179/vfsStream": "~1.0",
+        "mikey179/vfsstream": "~1.0",
         "symfony/http-kernel": "~3.4"
     },
     "authors": [
