--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "ramsey/uuid": "~3.7.3|3.8.*",
         "symfony/config": "~2.8|~3.0|~4.0",
         "symfony/console": "~2.3,!=2.7.0|~4.0",
-        "symfony/dependency-injection": "~2.3,!=2.7.0|~4.0",
+        "symfony/dependency-injection": "~2.3,~3.3,!=2.7.0|~4.0",
         "techdivision/import": "14.*",
         "techdivision/import-app-simple": "15.*",
         "techdivision/import-configuration-jms": "14.*"
