* Extract dev autoloading * Add command to import URL rewrites

--- a/composer.json
+++ b/composer.json
@@ -31,8 +31,14 @@
         "psr-4": {
             "TechDivision\\Import\\Cli\\": [
                 "src/",
-                "symfony/",
-                "tests/unit/"
+                "symfony/"
+            ]
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "TechDivision\\Import\\Cli\\": [
+                "tests/unit"
             ]
         }
     }
