--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,8 @@
         "symfony/config": "~2.8|~3.0|~4.0",
         "symfony/console": "~2.3,!=2.7.0|~4.0",
         "symfony/dependency-injection": "~2.3,!=2.7.0|~3.0|~4.0",
-        "techdivision/import": "16.x-dev as 15.2.1",
-        "techdivision/import-app-simple": "17.x-dev as 16.0.1",
-        "techdivision/import-configuration-jms": "16.x-dev as 15.0.4"
+        "techdivision/import-app-simple": "17.0.0",
+        "techdivision/import-configuration-jms": "16.0.0"
     },
     "require-dev": {
         "doctrine/dbal": "2.5.*",
