--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "OSL-3.0",
     "require": {
         "php": ">=7.1.0",
-        "symfony/config": "~2.8|~3.0|~4.0",
+        "symfony/config": "~2.8|~3.0|~4.0|~5.0",
         "symfony/console": "~2.3,!=2.7.0|~4.0",
         "symfony/dependency-injection": "~2.3,!=2.7.0|~3.0|~4.0",
         "techdivision/import-app-simple": "17.*",
