--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
     "name": "techdivision/import-cli",
     "description": "Commands and Helpers to implement a CLI providing single-threaded Magento 2 importing functionality based on Pacemaker",
-    "license": "OSL-3.0",
+    "license": "MIT",
     "require": {
-        "php": ">=7.1.0",
+        "php": ">=7.2.0",
         "ramsey/uuid": "~3.7.3|3.8.*|~4.1.0",
         "symfony/config": "~2.8|~3.0|~4.0|~5.0",
         "symfony/console": "~2.3,!=2.7.0|~4.0|~5.0",
