--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
     "description": "Commands and Helpers to implement a CLI providing single-threaded Magento 2 importing functionality based on Pacemaker",
     "license": "MIT",
     "require": {
-        "php": ">=7.2.0",
-        "ramsey/uuid": "~3.7.3|3.8.*|~4.1.0",
+        "php": ">=7.3.0",
+        "ramsey/uuid": "^3.7|^3.8|^4.1|^4.2",
         "symfony/config": "~2.8|~3.0|~4.0|~5.0",
         "symfony/console": "~2.3,!=2.7.0|~4.0|~5.0",
         "symfony/expression-language": "~2.3,!=2.7.0|~4.0|~5.0",
@@ -16,12 +16,12 @@
         "doctrine/dbal": "2.5.*",
         "pdepend/pdepend": "2.5.2",
         "phpmd/phpmd": "@stable",
-        "phpunit/phpunit": "^6.5.0|^8.0.0",
+        "phpunit/phpunit": "^6.5.0|^8.0.0|~9.5.0",
         "sebastian/phpcpd": "~3.0|~4.0|~5.0|~6.0",
-        "squizlabs/php_codesniffer": "~3.4.0",
+        "squizlabs/php_codesniffer":"~3.4.0|~3.6.0",
         "consolidation/robo": "~1.0",
         "mikey179/vfsstream": "~1.0",
-        "symfony/http-kernel": "~3.4"
+        "symfony/http-kernel": "~2.0|~3.0|~4.0"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
