--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
         "symfony/console": "~2.3,!=2.7.0|~4.0|~5.0",
         "symfony/expression-language": "~2.3,!=2.7.0|~4.0|~5.0",
         "symfony/dependency-injection": "~2.3,!=2.7.0|~3.0|~4.0|~5.0",
-        "techdivision/import-app-simple": "dev-master",
-        "techdivision/import-configuration-jms": "dev-master"
+        "techdivision/import-app-simple": "^18.0.0",
+        "techdivision/import-configuration-jms": "^17.0.0"
     },
     "require-dev": {
         "doctrine/dbal": "2.5.*",
