--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,10 @@
     "require": {
         "php": ">=7.3.0",
         "ramsey/uuid": "^3.7|^3.8|^4.1|^4.2",
-        "symfony/config": "~2.8|~3.0|~4.0|~5.0",
+        "symfony/config": "~2.8|~3.0|~4.0|~5.0|~6.0",
         "symfony/console": "~2.3,!=2.7.0|~4.0|~5.0",
         "symfony/expression-language": "~2.3,!=2.7.0|~4.0|~5.0",
-        "symfony/dependency-injection": "~2.3,!=2.7.0|~3.0|~4.0|~5.0",
+        "symfony/dependency-injection": "~2.3,!=2.7.0|~3.0|~4.0|~5.0|~6.0",
         "techdivision/import-app-simple": "^18.0.0",
         "techdivision/import-configuration-jms": "^17.0.0"
     },
@@ -21,7 +21,7 @@
         "squizlabs/php_codesniffer":"~3.4.0|~3.6.0",
         "consolidation/robo": "~1.0",
         "mikey179/vfsstream": "~1.0",
-        "symfony/http-kernel": "~2.0|~3.0|~4.0"
+        "symfony/http-kernel": "~2.0|~3.0|~4.0|~5.0|~6.0"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
