--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,10 @@
     "require": {
         "php": "^8.1",
         "ramsey/uuid": "^4.7.6",
-        "symfony/config": "v4.4.44",
-        "symfony/console": "v4.4.49",
-        "symfony/expression-language": "v6.4.8",
-        "symfony/dependency-injection": "v4.4.49",
+        "symfony/config": "~4.0|~5.0|~6.0",
+        "symfony/console": "~4.0|~5.0|~6.0|~7.0",
+        "symfony/expression-language": "~6.0",
+        "symfony/dependency-injection": "~4.0|~5.0|~6.0",
         "techdivision/import-app-simple": "dev-compatibility-php-81",
         "techdivision/import-configuration-jms": "dev-compatibility-php-81"
     },
