--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "ramsey/uuid": "^4.7.6",
+        "ramsey/uuid": "^4.2|^4.7",
         "symfony/config": "~4.0|~5.0|~6.0",
         "symfony/console": "~4.0|~5.0|~6.0|~7.0",
         "symfony/expression-language": "~6.0",
