--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
         "symfony/console": "~4.0|~5.0|~6.0|~7.0",
         "symfony/expression-language": "~6.0",
         "symfony/dependency-injection": "~4.0|~5.0|~6.0",
-        "techdivision/import-app-simple": "dev-compatibility-php-81",
-        "techdivision/import-configuration-jms": "dev-compatibility-php-81"
+        "techdivision/import-app-simple": "^19.0.0",
+        "techdivision/import-configuration-jms": "^18.0.0"
     },
     "require-dev": {
         "doctrine/dbal": "^4.0.4",
@@ -20,8 +20,8 @@
         "sebastian/phpcpd": "^2.0.1",
         "squizlabs/php_codesniffer": "^3.10.1",
         "consolidation/robo": "^4.0.2",
-        "mikey179/vfsstream": "v1.6.11",
-        "symfony/http-kernel": "v4.4.51"
+        "mikey179/vfsstream": "~1.6.11",
+        "symfony/http-kernel": "~4.4.51"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
